--- a/AppBancaEnLinea/AppBancaEnLinea/Views/MainPage.xaml
+++ b/AppBancaEnLinea/AppBancaEnLinea/Views/MainPage.xaml
@@ -4,9 +4,21 @@
              x:Class="AppBancaEnLinea.Views.MainPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <ListView x:Name="CuentasList"
+                      BackgroundColor="White"
+                      Grid.Row="4"
+                      SeparatorVisibility="Default">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell Height="30">
+                            <StackLayout Padding="5">
+                                <Label Text="{Binding CUE_DESCRIPCION}">
+                                </Label>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
