--- a/AppBancaEnLinea/AppBancaEnLinea/Views/PagoPageList.xaml
+++ b/AppBancaEnLinea/AppBancaEnLinea/Views/PagoPageList.xaml
@@ -3,10 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppBancaEnLinea.Views.PagoPageList">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+        <StackLayout HorizontalOptions="Center" Padding="30">
+            <Label
+                x:Name="Lbl_Title"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                HorizontalOptions="CenterAndExpand"/>
+            <ListView x:Name="PagoList" BackgroundColor="White" Grid.Row="4" SeparatorVisibility="Default">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell Height="30">
+                            <StackLayout Padding="5">
+                                <Label Text="{Binding PAG_DESCRIPCION_label}"></Label>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <Button 
+                x:Name="Btn_Regresar"
+                Text="Regresar"
+                TextColor="White"
+                BackgroundColor="Teal"
+                Clicked="Btn_Regresar_Clicked">
+            </Button>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
