--- a/AppBancaEnLinea/AppBancaEnLinea/Views/RegisterPage.xaml
+++ b/AppBancaEnLinea/AppBancaEnLinea/Views/RegisterPage.xaml
@@ -4,8 +4,8 @@
              x:Class="AppBancaEnLinea.Views.RegisterPage">
     <ContentPage.Content>
 		<StackLayout Padding="30" VerticalOptions="Center">
-			<Label Text="Registro de Usuarios" 
-             HorizontalOptions="Center" TextColor="#000000" FontSize="Medium" FontAttributes="Bold" Margin="-10, 40">
+			<Label Text="Registro de Usuario" 
+             HorizontalOptions="Center" TextColor="#000000" FontSize="Medium" FontAttributes="Bold" Margin="40">
 			</Label>
 			<Entry
                 x:Name="Txt_Identificacion"
