--- a/AppBancaEnLinea/AppBancaEnLinea/Views/RegisterPage.xaml
+++ b/AppBancaEnLinea/AppBancaEnLinea/Views/RegisterPage.xaml
@@ -47,10 +47,15 @@
                 HorizontalOptions="Fill"
                 HorizontalTextAlignment="Center"
                 Keyboard="Email"
-                FontSize="Small"></Entry>
+                FontSize="Small"
+				Margin="0, 0, 0, 20"></Entry>
+			<Label Text="Fecha de Creación:"
+				HorizontalOptions="Center"   
+			></Label>
             <DatePicker
                 x:Name="Pkr_Date"
-                HorizontalOptions="Center"></DatePicker>
+                HorizontalOptions="Center"
+				Margin="0, 0, 0, 20"></DatePicker>
             <Button
                 x:Name="Btn_Register"
                 Text="Registrar"
