--- a/AppBancaEnLinea/AppBancaEnLinea/Views/RegisterPage.xaml
+++ b/AppBancaEnLinea/AppBancaEnLinea/Views/RegisterPage.xaml
@@ -40,7 +40,7 @@
                 FontSize="Small"></Entry>
             <Entry
                 x:Name="Txt_PasswordConfirm"
-                Placeholder="Contraseña"
+                Placeholder=" Confirmar Contraseña"
                 IsPassword="True"
                 HorizontalOptions="Fill"
                 HorizontalTextAlignment="Center"
@@ -62,7 +62,7 @@
 				Margin="0, 0, 0, 20"></DatePicker>
             <Button
                 x:Name="Btn_Register"
-                Text="Crear Cuenta"
+                Text="Crear Usuario"
                 CornerRadius="30"
 				TextColor="White"
 				BackgroundColor="Green"
